# VideoPlayer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
